A lot of changes

--- a/src/Iot.Greenhouse.Blazor/Pages/Index.razor
+++ b/src/Iot.Greenhouse.Blazor/Pages/Index.razor
@@ -11,10 +11,11 @@
     @code {
     protected override void OnInitialized()
     {
-        if (CurrentUser.IsAuthenticated)
-        {
-            NavigationManager.NavigateTo("/dashboard");
-        }
+        // if (CurrentUser.IsAuthenticated)
+        // {
+        //     NavigationManager.NavigateTo("/dashboard");
+        // }
+        NavigationManager.NavigateTo("/dashboard",true);
     }
 
 }
