--- a/src/Iot.Greenhouse.Blazor/Pages/_Host.cshtml
+++ b/src/Iot.Greenhouse.Blazor/Pages/_Host.cshtml
@@ -20,6 +20,7 @@
     <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
     <link href="https://fonts.cdnfonts.com/css/seven-segment" rel="stylesheet">
 </head>
 <body class="abp-application-layout bg-light @rtl">
