--- a/src/Iot.Greenhouse.Blazor/_Imports.razor
+++ b/src/Iot.Greenhouse.Blazor/_Imports.razor
@@ -13,3 +13,4 @@
 @using Volo.Abp.BlazoriseUI.Components
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Syncfusion.Blazor
+@using BlazorAnimate
